<resources>
    <string name="app_name">My Application</string>
    <string name="btn_cal_0">0</string>
    <string name="btn_cal_00">00</string>
    <string name="btn_cal_1">1</string>
    <string name="btn_cal_2">2</string>
    <string name="btn_cal_3">3</string>
    <string name="btn_cal_4">4</string>
    <string name="btn_cal_5">5</string>
    <string name="btn_cal_6">6</string>
    <string name="btn_cal_7">7</string>
    <string name="btn_cal_8">8</string>
    <string name="btn_cal_9">9</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_esc">Esc</string>
    <string name="cancel_payments">Cancel Payment</string>
    <string name="get_paid">Get Paid</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_pin">Kindly input your pin</string>
    <string name="clear">C</string>
    <string name="enter_icon_string">⤶</string>
    <string name="left_arrow_icon_string">←</string>
</resources>