<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/pin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_10sp"
        android:text=""
        android:visibility="gone"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <GridLayout
        android:id="@+id/layoutKeyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:layout_marginBottom="@dimen/dimen_8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pin_text"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/btn1"
            android:layout_width="@dimen/_110dp"
            android:layout_height="@dimen/_60dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/btn_cal_1"
            android:layout_margin="@dimen/_5dp"
            android:textStyle="normal"
            android:background="@drawable/isw_bg_card"
            android:textColor="@color/black"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/btn2"
            android:layout_width="@dimen/_110dp"
            android:layout_height="@dimen/_60dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/btn_cal_2"
            android:layout_margin="@dimen/_5dp"
            android:textStyle="normal"
            android:background="@drawable/isw_bg_card"
            android:textColor="@color/black"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/btn3"
            android:layout_width="@dimen/_110dp"
            android:layout_height="@dimen/_60dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/btn_cal_3"
            android:layout_margin="@dimen/_5dp"
            android:textStyle="normal"
            android:background="@drawable/isw_bg_card"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/btn4"
            android:layout_width="@dimen/_110dp"
            android:layout_height="@dimen/_60dp"
            android:fontFamily="sans-serif"
            android:layout_margin="@dimen/_5dp"
            android:gravity="center"
            android:text="@string/btn_cal_4"
            android:textStyle="normal"
            android:background="@drawable/isw_bg_card"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/btn5"
            android:layout_width="@dimen/_110dp"
            android:layout_height="@dimen/_60dp"
            android:fontFamily="sans-serif"
            android:layout_margin="@dimen/_5dp"
            android:gravity="center"
            android:text="@string/btn_cal_5"
            android:textStyle="normal"
            android:background="@drawable/isw_bg_card"
            android:textColor="@color/black"
            android:textSize="30sp"
            />

        <TextView
            android:id="@+id/btn6"
            android:layout_width="@dimen/_110dp"
            android:layout_height="@dimen/_60dp"
            android:fontFamily="sans-serif"
            android:layout_margin="@dimen/_5dp"
            android:gravity="center"
            android:text="@string/btn_cal_6"
            android:textStyle="normal"
            android:background="@drawable/isw_bg_card"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/btn7"
            android:layout_width="@dimen/_110dp"
            android:layout_height="@dimen/_60dp"
            android:fontFamily="sans-serif"
            android:layout_margin="@dimen/_5dp"
            android:gravity="center"
            android:text="@string/btn_cal_7"
            android:textStyle="normal"
            android:background="@drawable/isw_bg_card"
            android:textColor="@color/black"
            android:textSize="30sp"
            />

        <TextView
            android:id="@+id/btn8"
            android:layout_width="@dimen/_110dp"
            android:layout_height="@dimen/_60dp"
            android:layout_margin="@dimen/_5dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/btn_cal_8"
            android:textStyle="normal"
            android:background="@drawable/isw_bg_card"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/btn9"
            android:layout_width="@dimen/_110dp"
            android:layout_height="@dimen/_60dp"
            android:layout_margin="@dimen/_5dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/btn_cal_9"
            android:textStyle="normal"
            android:background="@drawable/isw_bg_card"
            android:textColor="@color/black"
            android:textSize="30sp"
            />

    </GridLayout>

    <GridLayout
        android:id="@+id/down_key_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:layout_marginBottom="@dimen/dimen_8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutKeyboard"
        app:layout_constraintBottom_toTopOf="@id/btnConfirmx"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_110dp"
            android:layout_height="60dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:layout_margin="@dimen/_5dp"
            android:text="@string/left_arrow_icon_string"
            android:textStyle="normal"
            android:background="@drawable/isw_bg_card_red"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/btn0"
            android:layout_width="@dimen/_110dp"
            android:layout_height="@dimen/_60dp"
            android:fontFamily="sans-serif"
            android:layout_margin="@dimen/_5dp"
            android:gravity="center"
            android:text="@string/btn_cal_0"
            android:textStyle="normal"
            android:background="@drawable/isw_bg_card"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/btnConfirm"
            android:layout_width="@dimen/_110dp"
            android:layout_height="60dp"
            android:layout_margin="@dimen/_5dp"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:background="@drawable/isw_bg_card_green"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:textSize="30sp"
            android:text="@string/enter_icon_string"
            app:srcCompat="@drawable/icon_open_delete" />

    </GridLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirmx"
        android:layout_width="0.0dip"
        android:layout_height="@dimen/_50dp"
        android:layout_margin="@dimen/_30dp"
        android:visibility="gone"
        android:background="@drawable/button_rounded_bg_navy_blue"
        android:elevation="@dimen/_10dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="Continue"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupKeyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="layoutKeyboard" />

</androidx.constraintlayout.widget.ConstraintLayout>
